[gd_scene load_steps=2 format=3 uid="uid://c70bn21u3fvie"]

[ext_resource type="Script" path="res://ui/hud/hud.gd" id="1_equ6j"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_equ6j")

[node name="PlayerStats" type="ColorRect" parent="."]
custom_minimum_size = Vector2(250, 25)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
size_flags_horizontal = 3
color = Color(0, 0, 0, 0.588235)

[node name="MarginContainer" type="MarginContainer" parent="PlayerStats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerStats/MarginContainer"]
layout_mode = 2

[node name="LifesLabel" type="Label" parent="PlayerStats/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Lives:"

[node name="LifesValueLabel" type="Label" parent="PlayerStats/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "3"
horizontal_alignment = 2

[node name="VSeparator" type="VSeparator" parent="PlayerStats/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScoreLabel" type="Label" parent="PlayerStats/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Score:"

[node name="ScoreValueLabel" type="Label" parent="PlayerStats/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2
